# Plan-Diet

./: .gitignore  README.md  pyproject.toml  requirements.txt
PlanDiet/: settings.py
src/: .gitignore  manage.py  pyproject.toml  requirements.txt
src/PlanDiet/: .env.dist  asgi.py  settings.py  urls.py  wsgi.py
src/categories/: apps.py  choices.py  factories.py  forms.py  models.py  urls.py  views.py
src/categories/migrations/: 0001_initial.py  0002_alter_category_name.py
src/categories/tests/: test_factories.py  test_forms.py  test_urls.py  test_views.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/diets/: factories.py  forms.py  models.py  urls.py  views.py
src/diets/migrations/: 0001_initial.py
src/diets/tests/: test_factories.py  test_forms.py  test_urls.py  test_views.py
src/exercises/: choices.py  factories.py  models.py  urls.py  views.py
src/exercises/migrations/: 0001_initial.py  0002_alter_exercise_options.py
src/exercises/tests/: test_factories.py  test_urls.py  test_views.py
src/exercises/views/: exercise.py  muscle_group.py  sport_type.py
src/plandiet_app/: admin.py  apps.py  choices.py  conftest.py  forms.py  tests.py  views.py
src/plandiet_app/calculators/: bmr_calculator.py  cpm_calculator.py
src/plandiet_app/tests/: test_calculators.py  test_forms.py  test_urls.py  test_views.py
src/plans/: factories.py  forms.py  models.py  urls.py  views.py
src/plans/migrations/: 0001_initial.py
src/templates/: base.html  index.html  navbar.html
src/users/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
(+72 files in other folders)
